--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "axios": "^0.16.1",
     "chart.js": "^2.6.0",
     "js-cookie": "^2.1.4",
+    "moment": "latest",
+    "moment-range": "^3.0.3",
     "vue": "^2.2.6",
     "vue-chartjs": "^2.6.3",
     "vue-router": "^2.3.1",
-    "vuex": "^2.3.1",
-    "moment": "latest"
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
